9p: fix cache/debug options printing in v9fs_show_options (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12887,6 +12887,7 @@
 	patches.kernel.org/6.12.63-285-perf-hist-In-init-ensure-mem_info-is-put-on-e.patch
 	patches.kernel.org/6.12.63-286-pinctrl-single-Fix-incorrect-type-for-error-r.patch
 	patches.kernel.org/6.12.63-287-fbdev-ssd1307fb-fix-potential-page-leak-in-ss.patch
+	patches.kernel.org/6.12.63-288-9p-fix-cache-debug-options-printing-in-v9fs_s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
