ntfs3: fix uninit memory after failed mi_read in mi_format_new (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12637,6 +12637,7 @@
 	patches.kernel.org/6.12.63-035-irqchip-starfive-jh8100-Fix-section-mismatch.patch
 	patches.kernel.org/6.12.63-036-irqchip-qcom-irq-combiner-Fix-section-mismatc.patch
 	patches.kernel.org/6.12.63-037-crypto-authenc-Correctly-pass-EINPROGRESS-bac.patch
+	patches.kernel.org/6.12.63-038-ntfs3-fix-uninit-memory-after-failed-mi_read-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
