--- a/series.conf
+++ b/series.conf
@@ -12931,6 +12931,7 @@
 	patches.kernel.org/6.12.63-329-ALSA-uapi-Fix-typo-in-asound.h-comment.patch
 	patches.kernel.org/6.12.63-330-drm-amdkfd-Use-huge-page-size-to-check-split-.patch
 	patches.kernel.org/6.12.63-331-rtc-gamecube-Check-the-return-value-of-iorema.patch
+	patches.kernel.org/6.12.63-332-ALSA-firewire-motu-add-bounds-check-in-put_us.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
