RDMA/rtrs: server: Fix error handling in get_or_create_srv (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12733,6 +12733,7 @@
 	patches.kernel.org/6.12.63-131-scsi-stex-Fix-reboot_notifier-leak-in-probe-e.patch
 	patches.kernel.org/6.12.63-132-scsi-smartpqi-Fix-device-resources-accessed-a.patch
 	patches.kernel.org/6.12.63-133-dt-bindings-PCI-amlogic-Fix-the-register-name.patch
+	patches.kernel.org/6.12.63-134-RDMA-rtrs-server-Fix-error-handling-in-get_or.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
