--- a/series.conf
+++ b/series.conf
@@ -12758,6 +12758,7 @@
 	patches.kernel.org/6.12.63-156-PCI-keystone-Exit-ks_pcie_probe-for-invalid-m.patch
 	patches.kernel.org/6.12.63-157-arm64-dts-rockchip-Move-the-EEPROM-to-correct.patch
 	patches.kernel.org/6.12.63-158-arm64-dts-rockchip-Add-eeprom-vcc-supply-for-.patch
+	patches.kernel.org/6.12.63-159-arm64-dts-rockchip-Add-eeprom-vcc-supply-for-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
