--- a/series.conf
+++ b/series.conf
@@ -12793,6 +12793,7 @@
 	patches.kernel.org/6.12.63-191-leds-rgb-leds-qcom-lpg-Don-t-enable-TRILED-wh.patch
 	patches.kernel.org/6.12.63-192-phy-renesas-rcar-gen3-usb2-Fix-an-error-handl.patch
 	patches.kernel.org/6.12.63-193-phy-freescale-Initialize-priv-lock.patch
+	patches.kernel.org/6.12.63-194-phy-rockchip-samsung-hdptx-Reduce-ROPLL-loop-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
