irqchip/qcom-irq-combiner: Fix section mismatch (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12635,6 +12635,7 @@
 	patches.kernel.org/6.12.63-033-irqchip-imx-mu-msi-Fix-section-mismatch.patch
 	patches.kernel.org/6.12.63-034-irqchip-renesas-rzg2l-Fix-section-mismatch.patch
 	patches.kernel.org/6.12.63-035-irqchip-starfive-jh8100-Fix-section-mismatch.patch
+	patches.kernel.org/6.12.63-036-irqchip-qcom-irq-combiner-Fix-section-mismatc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
