NFS: Automounted filesystems should inherit ro,noexec,nodev,sync flags (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12909,6 +12909,7 @@
 	patches.kernel.org/6.12.63-307-Revert-nfs-ignore-SB_RDONLY-when-remounting-n.patch
 	patches.kernel.org/6.12.63-308-Revert-nfs-clear-SB_RDONLY-before-getting-sup.patch
 	patches.kernel.org/6.12.63-309-Revert-nfs-ignore-SB_RDONLY-when-mounting-nfs.patch
+	patches.kernel.org/6.12.63-310-NFS-Automounted-filesystems-should-inherit-ro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
