--- a/series.conf
+++ b/series.conf
@@ -12755,6 +12755,7 @@
 	patches.kernel.org/6.12.63-153-scsi-sim710-Fix-resource-leak-by-adding-missi.patch
 	patches.kernel.org/6.12.63-154-leds-netxbig-Fix-GPIO-descriptor-leak-in-erro.patch
 	patches.kernel.org/6.12.63-155-bpf-Free-special-fields-when-update-lru_-perc.patch
+	patches.kernel.org/6.12.63-156-PCI-keystone-Exit-ks_pcie_probe-for-invalid-m.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
