--- a/series.conf
+++ b/series.conf
@@ -12894,6 +12894,7 @@
 	patches.kernel.org/6.12.63-292-f2fs-add-a-sysfs-entry-to-reclaim-POSIX_FADV_.patch
 	patches.kernel.org/6.12.63-293-f2fs-fix-to-avoid-running-out-of-free-segment.patch
 	patches.kernel.org/6.12.63-294-f2fs-add-carve_out-sysfs-node.patch
+	patches.kernel.org/6.12.63-295-f2fs-sysfs-add-encoding_flags-entry.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
