fs/nls: Fix utf16 to utf8 conversion (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12900,6 +12900,7 @@
 	patches.kernel.org/6.12.63-298-f2fs-add-gc_boost_gc_greedy-sysfs-node.patch
 	patches.kernel.org/6.12.63-299-f2fs-maintain-one-time-GC-mode-is-enabled-dur.patch
 	patches.kernel.org/6.12.63-300-NFS-Avoid-changing-nlink-when-file-removes-an.patch
+	patches.kernel.org/6.12.63-301-fs-nls-Fix-utf16-to-utf8-conversion.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
