--- a/series.conf
+++ b/series.conf
@@ -12741,6 +12741,7 @@
 	patches.kernel.org/6.12.63-139-cpufreq-amd-pstate-Call-cppc_set_auto_sel-onl.patch
 	patches.kernel.org/6.12.63-140-powerpc-kdump-Fix-size-calculation-for-hot-re.patch
 	patches.kernel.org/6.12.63-141-powerpc-32-Fix-unpaired-stwcx.-on-interrupt-e.patch
+	patches.kernel.org/6.12.63-142-macintosh-mac_hid-fix-race-condition-in-mac_h.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
