--- a/series.conf
+++ b/series.conf
@@ -12782,6 +12782,7 @@
 	patches.kernel.org/6.12.63-180-drm-msm-a6xx-Fix-the-gemnoc-workaround.patch
 	patches.kernel.org/6.12.63-181-drm-msm-a6xx-Improve-MX-rail-fallback-in-RPMH.patch
 	patches.kernel.org/6.12.63-182-ipv6-clear-RA-flags-when-adding-a-static-rout.patch
+	patches.kernel.org/6.12.63-183-perf-arm-spe-Extend-branch-operations.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
