--- a/series.conf
+++ b/series.conf
@@ -12712,6 +12712,7 @@
 	patches.kernel.org/6.12.63-110-scsi-target-Do-not-write-NUL-characters-into-.patch
 	patches.kernel.org/6.12.63-111-fs-9p-Don-t-open-remote-file-with-APPEND-mode.patch
 	patches.kernel.org/6.12.63-112-drm-panthor-Handle-errors-returned-by-drm_sch.patch
+	patches.kernel.org/6.12.63-113-drm-panthor-Fix-group_free_queue-for-partiall.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
