perf arm_spe: Fix memset subclass in operation (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12783,6 +12783,7 @@
 	patches.kernel.org/6.12.63-181-drm-msm-a6xx-Improve-MX-rail-fallback-in-RPMH.patch
 	patches.kernel.org/6.12.63-182-ipv6-clear-RA-flags-when-adding-a-static-rout.patch
 	patches.kernel.org/6.12.63-183-perf-arm-spe-Extend-branch-operations.patch
+	patches.kernel.org/6.12.63-184-perf-arm_spe-Fix-memset-subclass-in-operation.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
