--- a/series.conf
+++ b/series.conf
@@ -12700,6 +12700,7 @@
 	patches.kernel.org/6.12.63-098-arm64-dts-qcom-msm8996-add-interconnect-paths.patch
 	patches.kernel.org/6.12.63-099-interconnect-debugfs-Fix-incorrect-error-hand.patch
 	patches.kernel.org/6.12.63-100-drm-imagination-Fix-reference-to-devm_platfor.patch
+	patches.kernel.org/6.12.63-101-perf-lock-contention-Load-kernel-map-before-l.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
