--- a/series.conf
+++ b/series.conf
@@ -12697,6 +12697,7 @@
 	patches.kernel.org/6.12.63-095-i3c-master-svc-Prevent-incomplete-IBI-transac.patch
 	patches.kernel.org/6.12.63-096-wifi-ath12k-fix-potential-memory-leak-in-ath1.patch
 	patches.kernel.org/6.12.63-097-interconnect-qcom-msm8996-add-missing-link-to.patch
+	patches.kernel.org/6.12.63-098-arm64-dts-qcom-msm8996-add-interconnect-paths.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
