--- a/series.conf
+++ b/series.conf
@@ -12949,6 +12949,7 @@
 	patches.kernel.org/6.12.63-347-tcp_metrics-use-dst_dev_net_rcu.patch
 	patches.kernel.org/6.12.63-348-usb-gadget-tegra-xudc-Always-reinitialize-dat.patch
 	patches.kernel.org/6.12.63-349-usb-phy-Initialize-struct-usb_phy-list_head.patch
+	patches.kernel.org/6.12.63-350-usb-dwc3-dwc3_power_off_all_roothub_ports-Use.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
