--- a/series.conf
+++ b/series.conf
@@ -12901,6 +12901,7 @@
 	patches.kernel.org/6.12.63-299-f2fs-maintain-one-time-GC-mode-is-enabled-dur.patch
 	patches.kernel.org/6.12.63-300-NFS-Avoid-changing-nlink-when-file-removes-an.patch
 	patches.kernel.org/6.12.63-301-fs-nls-Fix-utf16-to-utf8-conversion.patch
+	patches.kernel.org/6.12.63-302-NFS-Initialise-verifiers-for-visible-dentries.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
