leds: rgb: leds-qcom-lpg: Don't enable TRILED when configuring PWM (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12790,6 +12790,7 @@
 	patches.kernel.org/6.12.63-188-wifi-mac80211-fix-CMAC-functions-not-handling.patch
 	patches.kernel.org/6.12.63-189-mfd-mt6397-irq-Fix-missing-irq_domain_remove-.patch
 	patches.kernel.org/6.12.63-190-mfd-mt6358-irq-Fix-missing-irq_domain_remove-.patch
+	patches.kernel.org/6.12.63-191-leds-rgb-leds-qcom-lpg-Don-t-enable-TRILED-wh.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
