--- a/series.conf
+++ b/series.conf
@@ -12917,6 +12917,7 @@
 	patches.kernel.org/6.12.63-315-ASoC-bcm-bcm63xx-pcm-whistler-Check-return-va.patch
 	patches.kernel.org/6.12.63-316-ASoC-ak4458-Disable-regulator-when-error-happ.patch
 	patches.kernel.org/6.12.63-317-ASoC-ak5558-Disable-regulator-when-error-happ.patch
+	patches.kernel.org/6.12.63-318-blk-mq-Abort-suspend-when-wakeup-events-are-p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
