clk: renesas: cpg-mssr: Add missing 1ms delay into reset toggle callback (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12616,6 +12616,7 @@
 	patches.kernel.org/6.12.63-014-drm-vgem-fence-Fix-potential-deadlock-on-rele.patch
 	patches.kernel.org/6.12.63-015-USB-Fix-descriptor-count-when-handling-invali.patch
 	patches.kernel.org/6.12.63-016-pinctrl-renesas-rzg2l-Fix-PMC-restore.patch
+	patches.kernel.org/6.12.63-017-clk-renesas-cpg-mssr-Add-missing-1ms-delay-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
