rtc: gamecube: Check the return value of ioremap() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12930,6 +12930,7 @@
 	patches.kernel.org/6.12.63-328-dma-pool-eliminate-alloc_pages-warning-in-ato.patch
 	patches.kernel.org/6.12.63-329-ALSA-uapi-Fix-typo-in-asound.h-comment.patch
 	patches.kernel.org/6.12.63-330-drm-amdkfd-Use-huge-page-size-to-check-split-.patch
+	patches.kernel.org/6.12.63-331-rtc-gamecube-Check-the-return-value-of-iorema.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
