--- a/series.conf
+++ b/series.conf
@@ -12673,6 +12673,7 @@
 	patches.kernel.org/6.12.63-071-firmware-imx-scu-irq-fix-OF-node-leak-in.patch
 	patches.kernel.org/6.12.63-072-arm64-dts-qcom-x1e80100-Fix-compile-warnings-.patch
 	patches.kernel.org/6.12.63-073-arm64-dts-qcom-x1e80100-Add-missing-quirk-for.patch
+	patches.kernel.org/6.12.63-074-arm64-dts-qcom-sdm845-oneplus-Correct-gpio-us.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
