--- a/series.conf
+++ b/series.conf
@@ -12669,6 +12669,7 @@
 	patches.kernel.org/6.12.63-067-wifi-ath11k-fix-peer-HE-MCS-assignment.patch
 	patches.kernel.org/6.12.63-068-s390-smp-Fix-fallback-CPU-detection.patch
 	patches.kernel.org/6.12.63-069-s390-ap-Don-t-leak-debug-feature-files-if-AP-.patch
+	patches.kernel.org/6.12.63-070-arm64-dts-ti-k3-am62p-Fix-memory-ranges-for-G.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
