HID: logitech-hidpp: Do not assume FAP in hidpp_send_message_sync() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12621,6 +12621,7 @@
 	patches.kernel.org/6.12.63-019-clk-renesas-Pass-sub-struct-of-cpg_mssr_priv-.patch
 	patches.kernel.org/6.12.63-020-clk-renesas-cpg-mssr-Read-back-reset-register.patch
 	patches.kernel.org/6.12.63-021-drm-atmel-hlcdc-fix-atmel_xlcdc_plane_setup_s.patch
+	patches.kernel.org/6.12.63-022-HID-logitech-hidpp-Do-not-assume-FAP-in-hidpp.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
