clk: renesas: Pass sub struct of cpg_mssr_priv to cpg_clk_register (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12618,6 +12618,7 @@
 	patches.kernel.org/6.12.63-016-pinctrl-renesas-rzg2l-Fix-PMC-restore.patch
 	patches.kernel.org/6.12.63-017-clk-renesas-cpg-mssr-Add-missing-1ms-delay-in.patch
 	patches.kernel.org/6.12.63-018-clk-renesas-Use-str_on_off-helper.patch
+	patches.kernel.org/6.12.63-019-clk-renesas-Pass-sub-struct-of-cpg_mssr_priv-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
