--- a/series.conf
+++ b/series.conf
@@ -12643,6 +12643,7 @@
 	patches.kernel.org/6.12.63-041-dt-bindings-clock-qcom-x1e80100-gcc-Add-missi.patch
 	patches.kernel.org/6.12.63-042-clk-qcom-gcc-x1e80100-Add-missing-USB4-clocks.patch
 	patches.kernel.org/6.12.63-043-rculist-Add-hlist_nulls_replace_rcu-and-hlist.patch
+	patches.kernel.org/6.12.63-044-inet-Avoid-ehash-lookup-race-in-inet_ehash_in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
