phy: rockchip: samsung-hdptx: Prevent Inter-Pair Skew from exceeding the limits (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12794,6 +12794,7 @@
 	patches.kernel.org/6.12.63-192-phy-renesas-rcar-gen3-usb2-Fix-an-error-handl.patch
 	patches.kernel.org/6.12.63-193-phy-freescale-Initialize-priv-lock.patch
 	patches.kernel.org/6.12.63-194-phy-rockchip-samsung-hdptx-Reduce-ROPLL-loop-.patch
+	patches.kernel.org/6.12.63-195-phy-rockchip-samsung-hdptx-Prevent-Inter-Pair.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
