ocfs2: fix memory leak in ocfs2_merge_rec_left() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12942,6 +12942,7 @@
 	patches.kernel.org/6.12.63-340-efi-cper-align-ARM-CPER-type-with-UEFI-2.9A-2.patch
 	patches.kernel.org/6.12.63-341-scsi-imm-Fix-use-after-free-bug-caused-by-unf.patch
 	patches.kernel.org/6.12.63-342-irqchip-mchp-eic-Fix-error-code-in-mchp_eic_d.patch
+	patches.kernel.org/6.12.63-343-ocfs2-fix-memory-leak-in-ocfs2_merge_rec_left.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
