soc: qcom: smem: fix hwspinlock resource leak in probe error paths (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12691,6 +12691,7 @@
 	patches.kernel.org/6.12.63-089-task_work-Fix-NMI-race-condition.patch
 	patches.kernel.org/6.12.63-090-x86-dumpstack-Prevent-KASAN-false-positive-wa.patch
 	patches.kernel.org/6.12.63-091-tools-nolibc-stdio-let-perror-work-when-NOLIB.patch
+	patches.kernel.org/6.12.63-092-soc-qcom-smem-fix-hwspinlock-resource-leak-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
