arm64: dts: freescale: imx8mp-venice-gw7905-2x: remove duplicate usdhc1 props (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12649,6 +12649,7 @@
 	patches.kernel.org/6.12.63-047-firmware-qcom-tzmem-fix-qcom_tzmem_policy-ker.patch
 	patches.kernel.org/6.12.63-048-block-mq-deadline-Introduce-dd_start_request.patch
 	patches.kernel.org/6.12.63-049-block-mq-deadline-Switch-back-to-a-single-dis.patch
+	patches.kernel.org/6.12.63-050-arm64-dts-freescale-imx8mp-venice-gw7905-2x-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
