staging: fbtft: core: fix potential memory leak in fbtft_probe_common() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12816,6 +12816,7 @@
 	patches.kernel.org/6.12.63-214-ASoC-tas2781-correct-the-wrong-period.patch
 	patches.kernel.org/6.12.63-215-mt76-mt7615-Fix-memory-leak-in-mt7615_mcu_wtb.patch
 	patches.kernel.org/6.12.63-216-firmware-stratix10-svc-fix-make-htmldocs-warn.patch
+	patches.kernel.org/6.12.63-217-staging-fbtft-core-fix-potential-memory-leak-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
