--- a/series.conf
+++ b/series.conf
@@ -12824,6 +12824,7 @@
 	patches.kernel.org/6.12.63-222-um-Don-t-rename-vmap-to-kernel_vmap.patch
 	patches.kernel.org/6.12.63-223-iomap-factor-out-a-iomap_dio_done-helper.patch
 	patches.kernel.org/6.12.63-224-iomap-always-run-error-completions-in-user-co.patch
+	patches.kernel.org/6.12.63-225-wifi-ieee80211-correct-FILS-status-codes.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
