scsi: smartpqi: Fix device resources accessed after device removal (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12731,6 +12731,7 @@
 	patches.kernel.org/6.12.63-129-md-fix-rcu-protection-in-md_wakeup_thread.patch
 	patches.kernel.org/6.12.63-130-nbd-defer-config-put-in-recv_work.patch
 	patches.kernel.org/6.12.63-131-scsi-stex-Fix-reboot_notifier-leak-in-probe-e.patch
+	patches.kernel.org/6.12.63-132-scsi-smartpqi-Fix-device-resources-accessed-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
