--- a/series.conf
+++ b/series.conf
@@ -12619,6 +12619,7 @@
 	patches.kernel.org/6.12.63-017-clk-renesas-cpg-mssr-Add-missing-1ms-delay-in.patch
 	patches.kernel.org/6.12.63-018-clk-renesas-Use-str_on_off-helper.patch
 	patches.kernel.org/6.12.63-019-clk-renesas-Pass-sub-struct-of-cpg_mssr_priv-.patch
+	patches.kernel.org/6.12.63-020-clk-renesas-cpg-mssr-Read-back-reset-register.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
