--- a/series.conf
+++ b/series.conf
@@ -12749,6 +12749,7 @@
 	patches.kernel.org/6.12.63-147-coresight-etm4x-Extract-the-trace-unit-contro.patch
 	patches.kernel.org/6.12.63-148-coresight-etm4x-Add-context-synchronization-b.patch
 	patches.kernel.org/6.12.63-149-clk-renesas-r9a06g032-Fix-memory-leak-in-erro.patch
+	patches.kernel.org/6.12.63-150-lib-vsprintf-Check-pointer-before-dereferenci.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
