--- a/series.conf
+++ b/series.conf
@@ -12647,6 +12647,7 @@
 	patches.kernel.org/6.12.63-045-inet-Avoid-ehash-lookup-race-in-inet_twsk_has.patch
 	patches.kernel.org/6.12.63-046-iio-imu-st_lsm6dsx-Fix-measurement-unit-for-o.patch
 	patches.kernel.org/6.12.63-047-firmware-qcom-tzmem-fix-qcom_tzmem_policy-ker.patch
+	patches.kernel.org/6.12.63-048-block-mq-deadline-Introduce-dd_start_request.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
