PCI: rcar-gen2: Drop ARM dependency from PCI_RCAR_GEN2 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12655,6 +12655,7 @@
 	patches.kernel.org/6.12.63-053-arm64-dts-imx8mp-venice-gw702x-remove-off-boa.patch
 	patches.kernel.org/6.12.63-054-perf-annotate-Check-return-value-of-evsel__ge.patch
 	patches.kernel.org/6.12.63-055-arm64-dts-exynos-gs101-fix-sysreg_apm-reg-pro.patch
+	patches.kernel.org/6.12.63-056-PCI-rcar-gen2-Drop-ARM-dependency-from-PCI_RC.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
