--- a/series.conf
+++ b/series.conf
@@ -12781,6 +12781,7 @@
 	patches.kernel.org/6.12.63-179-drm-msm-a6xx-Flush-LRZ-cache-before-PT-switch.patch
 	patches.kernel.org/6.12.63-180-drm-msm-a6xx-Fix-the-gemnoc-workaround.patch
 	patches.kernel.org/6.12.63-181-drm-msm-a6xx-Improve-MX-rail-fallback-in-RPMH.patch
+	patches.kernel.org/6.12.63-182-ipv6-clear-RA-flags-when-adding-a-static-rout.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
