--- a/series.conf
+++ b/series.conf
@@ -12722,6 +12722,7 @@
 	patches.kernel.org/6.12.63-120-ARM-dts-omap3-beagle-xm-Correct-obsolete-TWL4.patch
 	patches.kernel.org/6.12.63-121-ARM-dts-omap3-n900-Correct-obsolete-TWL4030-p.patch
 	patches.kernel.org/6.12.63-122-x86-boot-Fix-page-table-access-in-5-level-to-.patch
+	patches.kernel.org/6.12.63-123-efi-libstub-Fix-page-table-access-in-5-level-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
