Reinstate "resource: avoid unnecessary lookups in find_next_iomem_res()" (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12861,6 +12861,7 @@
 	patches.kernel.org/6.12.63-259-regulator-core-Protect-regulator_supply_alias.patch
 	patches.kernel.org/6.12.63-260-resource-replace-open-coded-resource_intersec.patch
 	patches.kernel.org/6.12.63-261-resource-introduce-is_type_match-helper-and-u.patch
+	patches.kernel.org/6.12.63-262-Reinstate-resource-avoid-unnecessary-lookups-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
