--- a/series.conf
+++ b/series.conf
@@ -12939,6 +12939,7 @@
 	patches.kernel.org/6.12.63-337-dm-log-writes-Add-missing-set_freezable-for-f.patch
 	patches.kernel.org/6.12.63-338-efi-cper-Add-a-new-helper-function-to-print-b.patch
 	patches.kernel.org/6.12.63-339-efi-cper-Adjust-infopfx-size-to-accept-an-ext.patch
+	patches.kernel.org/6.12.63-340-efi-cper-align-ARM-CPER-type-with-UEFI-2.9A-2.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
