drm/panthor: Handle errors returned by drm_sched_entity_init() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12711,6 +12711,7 @@
 	patches.kernel.org/6.12.63-109-power-supply-apm_power-only-unset-own-apm_get.patch
 	patches.kernel.org/6.12.63-110-scsi-target-Do-not-write-NUL-characters-into-.patch
 	patches.kernel.org/6.12.63-111-fs-9p-Don-t-open-remote-file-with-APPEND-mode.patch
+	patches.kernel.org/6.12.63-112-drm-panthor-Handle-errors-returned-by-drm_sch.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
