wifi: ath10k: move recovery check logic into a new work (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12626,6 +12626,7 @@
 	patches.kernel.org/6.12.63-024-objtool-Fix-weak-symbol-detection.patch
 	patches.kernel.org/6.12.63-025-wifi-ath10k-Avoid-vdev-delete-timeout-when-fi.patch
 	patches.kernel.org/6.12.63-026-wifi-ath10k-Add-missing-include-of-export.h.patch
+	patches.kernel.org/6.12.63-027-wifi-ath10k-move-recovery-check-logic-into-a-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
