--- a/series.conf
+++ b/series.conf
@@ -12754,6 +12754,7 @@
 	patches.kernel.org/6.12.63-152-ACPI-property-Fix-fwnode-refcount-leak-in-acp.patch
 	patches.kernel.org/6.12.63-153-scsi-sim710-Fix-resource-leak-by-adding-missi.patch
 	patches.kernel.org/6.12.63-154-leds-netxbig-Fix-GPIO-descriptor-leak-in-erro.patch
+	patches.kernel.org/6.12.63-155-bpf-Free-special-fields-when-update-lru_-perc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
