net/sched: sch_cake: Fix incorrect qlen reduction in cake_drop (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12881,6 +12881,7 @@
 	patches.kernel.org/6.12.63-279-net-hsr-Create-and-export-hsr_get_port_ndev.patch
 	patches.kernel.org/6.12.63-280-net-hsr-create-an-API-to-get-hsr-port-type.patch
 	patches.kernel.org/6.12.63-281-net-dsa-xrs700x-reject-unsupported-HSR-config.patch
+	patches.kernel.org/6.12.63-282-net-sched-sch_cake-Fix-incorrect-qlen-reducti.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
