smack: always "instantiate" inode in smack_inode_init_security() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12603,6 +12603,7 @@
 	patches.kernel.org/6.12.63-001-smack-deduplicate-does-access-rule-request-tr.patch
 	patches.kernel.org/6.12.63-002-smack-fix-bug-SMACK64TRANSMUTE-set-on-non-dir.patch
 	patches.kernel.org/6.12.63-003-smack-deduplicate-xattr-setting-in-smack_inod.patch
+	patches.kernel.org/6.12.63-004-smack-always-instantiate-inode-in-smack_inode.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
