--- a/series.conf
+++ b/series.conf
@@ -12795,6 +12795,7 @@
 	patches.kernel.org/6.12.63-193-phy-freescale-Initialize-priv-lock.patch
 	patches.kernel.org/6.12.63-194-phy-rockchip-samsung-hdptx-Reduce-ROPLL-loop-.patch
 	patches.kernel.org/6.12.63-195-phy-rockchip-samsung-hdptx-Prevent-Inter-Pair.patch
+	patches.kernel.org/6.12.63-196-net-phy-adin1100-Fix-software-power-down-read.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
