--- a/series.conf
+++ b/series.conf
@@ -12888,6 +12888,7 @@
 	patches.kernel.org/6.12.63-286-pinctrl-single-Fix-incorrect-type-for-error-r.patch
 	patches.kernel.org/6.12.63-287-fbdev-ssd1307fb-fix-potential-page-leak-in-ss.patch
 	patches.kernel.org/6.12.63-288-9p-fix-cache-debug-options-printing-in-v9fs_s.patch
+	patches.kernel.org/6.12.63-289-sched-fair-Fix-unfairness-caused-by-stalled-t.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
