--- a/series.conf
+++ b/series.conf
@@ -12863,6 +12863,7 @@
 	patches.kernel.org/6.12.63-261-resource-introduce-is_type_match-helper-and-u.patch
 	patches.kernel.org/6.12.63-262-Reinstate-resource-avoid-unnecessary-lookups-.patch
 	patches.kernel.org/6.12.63-263-netfilter-flowtable-check-for-maximum-number-.patch
+	patches.kernel.org/6.12.63-264-netfilter-nf_conncount-rework-API-to-use-sk_b.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
