--- a/series.conf
+++ b/series.conf
@@ -12634,6 +12634,7 @@
 	patches.kernel.org/6.12.63-032-irqchip-irq-brcmstb-l2-Fix-section-mismatch.patch
 	patches.kernel.org/6.12.63-033-irqchip-imx-mu-msi-Fix-section-mismatch.patch
 	patches.kernel.org/6.12.63-034-irqchip-renesas-rzg2l-Fix-section-mismatch.patch
+	patches.kernel.org/6.12.63-035-irqchip-starfive-jh8100-Fix-section-mismatch.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
