spi: airoha-snfi: en7523: workaround flash damaging if UART_TXD was short to GND (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12853,6 +12853,7 @@
 	patches.kernel.org/6.12.63-251-vhost-Fix-kthread-worker-cgroup-failure-handl.patch
 	patches.kernel.org/6.12.63-252-vdpa-pds-use-pe-for-ERR_PTR-in-event-handler-.patch
 	patches.kernel.org/6.12.63-253-ASoC-Intel-catpt-Fix-error-path-in-hw_params.patch
+	patches.kernel.org/6.12.63-254-spi-airoha-snfi-en7523-workaround-flash-damag.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
