smack: fix bug: unprivileged task can create labels (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12605,6 +12605,7 @@
 	patches.kernel.org/6.12.63-003-smack-deduplicate-xattr-setting-in-smack_inod.patch
 	patches.kernel.org/6.12.63-004-smack-always-instantiate-inode-in-smack_inode.patch
 	patches.kernel.org/6.12.63-005-smack-fix-bug-invalid-label-of-unix-socket-fi.patch
+	patches.kernel.org/6.12.63-006-smack-fix-bug-unprivileged-task-can-create-la.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
