ARM: dts: am335x-netcom-plus-2xx: add missing GPIO labels (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12718,6 +12718,7 @@
 	patches.kernel.org/6.12.63-116-drm-panthor-Fix-UAF-on-kernel-BO-VA-nodes.patch
 	patches.kernel.org/6.12.63-117-spi-tegra210-quad-Fix-timeout-handling.patch
 	patches.kernel.org/6.12.63-118-libbpf-Fix-parsing-of-multi-split-BTF.patch
+	patches.kernel.org/6.12.63-119-ARM-dts-am335x-netcom-plus-2xx-add-missing-GP.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
