--- a/series.conf
+++ b/series.conf
@@ -12943,6 +12943,7 @@
 	patches.kernel.org/6.12.63-341-scsi-imm-Fix-use-after-free-bug-caused-by-unf.patch
 	patches.kernel.org/6.12.63-342-irqchip-mchp-eic-Fix-error-code-in-mchp_eic_d.patch
 	patches.kernel.org/6.12.63-343-ocfs2-fix-memory-leak-in-ocfs2_merge_rec_left.patch
+	patches.kernel.org/6.12.63-344-LoongArch-Add-machine_kexec_mask_interrupts-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
