cpuset: Treat cpusets in attaching as populated (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12796,6 +12796,7 @@
 	patches.kernel.org/6.12.63-194-phy-rockchip-samsung-hdptx-Reduce-ROPLL-loop-.patch
 	patches.kernel.org/6.12.63-195-phy-rockchip-samsung-hdptx-Prevent-Inter-Pair.patch
 	patches.kernel.org/6.12.63-196-net-phy-adin1100-Fix-software-power-down-read.patch
+	patches.kernel.org/6.12.63-197-cpuset-Treat-cpusets-in-attaching-as-populate.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
