--- a/series.conf
+++ b/series.conf
@@ -12706,6 +12706,7 @@
 	patches.kernel.org/6.12.63-104-power-supply-cw2015-Check-devm_delayed_work_a.patch
 	patches.kernel.org/6.12.63-105-power-supply-max17040-Check-iio_read_channel_.patch
 	patches.kernel.org/6.12.63-106-power-supply-rt9467-Return-error-on-failure-i.patch
+	patches.kernel.org/6.12.63-107-power-supply-rt9467-Prevent-using-uninitializ.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
