accel/ivpu: Fix DCT active percent format (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12612,6 +12612,7 @@
 	patches.kernel.org/6.12.63-010-accel-ivpu-Ensure-rpm_runtime_put-in-case-of-.patch
 	patches.kernel.org/6.12.63-011-drm-panel-visionox-rm69299-Don-t-clear-all-mo.patch
 	patches.kernel.org/6.12.63-012-accel-ivpu-Make-function-parameter-names-cons.patch
+	patches.kernel.org/6.12.63-013-accel-ivpu-Fix-DCT-active-percent-format.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
