iio: imu: st_lsm6dsx: Fix measurement unit for odr struct member (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12645,6 +12645,7 @@
 	patches.kernel.org/6.12.63-043-rculist-Add-hlist_nulls_replace_rcu-and-hlist.patch
 	patches.kernel.org/6.12.63-044-inet-Avoid-ehash-lookup-race-in-inet_ehash_in.patch
 	patches.kernel.org/6.12.63-045-inet-Avoid-ehash-lookup-race-in-inet_twsk_has.patch
+	patches.kernel.org/6.12.63-046-iio-imu-st_lsm6dsx-Fix-measurement-unit-for-o.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
