--- a/series.conf
+++ b/series.conf
@@ -12921,6 +12921,7 @@
 	patches.kernel.org/6.12.63-319-block-fix-comment-for-op_is_zone_mgmt-to-incl.patch
 	patches.kernel.org/6.12.63-320-block-fix-memory-leak-in-__blkdev_issue_zero_.patch
 	patches.kernel.org/6.12.63-321-nvme-auth-use-kvfree-for-memory-allocated-wit.patch
+	patches.kernel.org/6.12.63-322-drm-plane-Fix-IS_ERR-vs-NULL-check-in-drm_pla.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
