docs: hwmon: fix link to g762 devicetree binding (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12926,6 +12926,7 @@
 	patches.kernel.org/6.12.63-324-ALSA-firewire-motu-fix-buffer-overflow-in-hwd.patch
 	patches.kernel.org/6.12.63-325-drm-nouveau-refactor-deprecated-strcpy.patch
 	patches.kernel.org/6.12.63-326-cifs-Fix-handling-of-a-beyond-EOF-DIO-unbuffe.patch
+	patches.kernel.org/6.12.63-327-docs-hwmon-fix-link-to-g762-devicetree-bindin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
