wifi: rtl818x: rtl8187: Fix potential buffer underflow in rtl8187_rx_cb() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12797,6 +12797,7 @@
 	patches.kernel.org/6.12.63-195-phy-rockchip-samsung-hdptx-Prevent-Inter-Pair.patch
 	patches.kernel.org/6.12.63-196-net-phy-adin1100-Fix-software-power-down-read.patch
 	patches.kernel.org/6.12.63-197-cpuset-Treat-cpusets-in-attaching-as-populate.patch
+	patches.kernel.org/6.12.63-198-wifi-rtl818x-rtl8187-Fix-potential-buffer-und.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
