dt-bindings: PCI: amlogic: Fix the register name of the DBI region (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12732,6 +12732,7 @@
 	patches.kernel.org/6.12.63-130-nbd-defer-config-put-in-recv_work.patch
 	patches.kernel.org/6.12.63-131-scsi-stex-Fix-reboot_notifier-leak-in-probe-e.patch
 	patches.kernel.org/6.12.63-132-scsi-smartpqi-Fix-device-resources-accessed-a.patch
+	patches.kernel.org/6.12.63-133-dt-bindings-PCI-amlogic-Fix-the-register-name.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
