arm64: dts: qcom: x1e80100: Fix compile warnings for USB HS controller (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12671,6 +12671,7 @@
 	patches.kernel.org/6.12.63-069-s390-ap-Don-t-leak-debug-feature-files-if-AP-.patch
 	patches.kernel.org/6.12.63-070-arm64-dts-ti-k3-am62p-Fix-memory-ranges-for-G.patch
 	patches.kernel.org/6.12.63-071-firmware-imx-scu-irq-fix-OF-node-leak-in.patch
+	patches.kernel.org/6.12.63-072-arm64-dts-qcom-x1e80100-Fix-compile-warnings-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
