--- a/series.conf
+++ b/series.conf
@@ -12704,6 +12704,7 @@
 	patches.kernel.org/6.12.63-102-perf-record-skip-synthesize-event-when-open-e.patch
 	patches.kernel.org/6.12.63-103-power-supply-rt5033_charger-Fix-device-node-r.patch
 	patches.kernel.org/6.12.63-104-power-supply-cw2015-Check-devm_delayed_work_a.patch
+	patches.kernel.org/6.12.63-105-power-supply-max17040-Check-iio_read_channel_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
