--- a/series.conf
+++ b/series.conf
@@ -12803,6 +12803,7 @@
 	patches.kernel.org/6.12.63-201-usb-chaoskey-fix-locking-for-O_NONBLOCK.patch
 	patches.kernel.org/6.12.63-202-usb-dwc2-disable-platform-lowlevel-hw-resourc.patch
 	patches.kernel.org/6.12.63-203-usb-dwc2-fix-hang-during-shutdown-if-set-as-p.patch
+	patches.kernel.org/6.12.63-204-usb-dwc2-fix-hang-during-suspend-if-set-as-pe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
