--- a/series.conf
+++ b/series.conf
@@ -12775,6 +12775,7 @@
 	patches.kernel.org/6.12.63-173-bpf-Fix-invalid-prog-stats-access-when-update.patch
 	patches.kernel.org/6.12.63-174-powerpc-64s-hash-Restrict-stress_hpt_struct-m.patch
 	patches.kernel.org/6.12.63-175-powerpc-64s-ptdump-Fix-kernel_hash_pagetable-.patch
+	patches.kernel.org/6.12.63-176-fs-ntfs3-out1-also-needs-to-put-mi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
