--- a/series.conf
+++ b/series.conf
@@ -12756,6 +12756,7 @@
 	patches.kernel.org/6.12.63-154-leds-netxbig-Fix-GPIO-descriptor-leak-in-erro.patch
 	patches.kernel.org/6.12.63-155-bpf-Free-special-fields-when-update-lru_-perc.patch
 	patches.kernel.org/6.12.63-156-PCI-keystone-Exit-ks_pcie_probe-for-invalid-m.patch
+	patches.kernel.org/6.12.63-157-arm64-dts-rockchip-Move-the-EEPROM-to-correct.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
