--- a/series.conf
+++ b/series.conf
@@ -12665,6 +12665,7 @@
 	patches.kernel.org/6.12.63-063-soc-qcom-gsbi-fix-double-disable-caused-by-de.patch
 	patches.kernel.org/6.12.63-064-crypto-asymmetric_keys-prevent-overflow-in-as.patch
 	patches.kernel.org/6.12.63-065-crypto-hisilicon-qm-restore-original-qos-valu.patch
+	patches.kernel.org/6.12.63-066-wifi-ath11k-fix-VHT-MCS-assignment.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
