--- a/series.conf
+++ b/series.conf
@@ -12744,6 +12744,7 @@
 	patches.kernel.org/6.12.63-142-macintosh-mac_hid-fix-race-condition-in-mac_h.patch
 	patches.kernel.org/6.12.63-143-wifi-cw1200-Fix-potential-memory-leak-in-cw12.patch
 	patches.kernel.org/6.12.63-144-nbd-defer-config-unlock-in-nbd_genl_connect.patch
+	patches.kernel.org/6.12.63-145-coresight-Change-device-mode-to-atomic-type.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
