vfio/pci: Use RCU for error/request triggers to avoid circular locking (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12868,6 +12868,7 @@
 	patches.kernel.org/6.12.63-266-net-stmmac-fix-rx-limit-check-in-stmmac_rx_zc.patch
 	patches.kernel.org/6.12.63-267-mtd-rawnand-renesas-Handle-devm_pm_runtime_en.patch
 	patches.kernel.org/6.12.63-268-spi-ch341-fix-out-of-bounds-memory-access-in-.patch
+	patches.kernel.org/6.12.63-269-vfio-pci-Use-RCU-for-error-request-triggers-t.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
