--- a/series.conf
+++ b/series.conf
@@ -12617,6 +12617,7 @@
 	patches.kernel.org/6.12.63-015-USB-Fix-descriptor-count-when-handling-invali.patch
 	patches.kernel.org/6.12.63-016-pinctrl-renesas-rzg2l-Fix-PMC-restore.patch
 	patches.kernel.org/6.12.63-017-clk-renesas-cpg-mssr-Add-missing-1ms-delay-in.patch
+	patches.kernel.org/6.12.63-018-clk-renesas-Use-str_on_off-helper.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
