--- a/series.conf
+++ b/series.conf
@@ -12679,6 +12679,7 @@
 	patches.kernel.org/6.12.63-077-phy-mscc-Fix-PTP-for-VSC8574-and-VSC8572.patch
 	patches.kernel.org/6.12.63-078-sctp-Defer-SCTP_DBG_OBJCNT_DEC-to-sctp_destro.patch
 	patches.kernel.org/6.12.63-079-RDMA-rxe-Fix-null-deref-on-srq-rq.queue-after.patch
+	patches.kernel.org/6.12.63-080-ARM-dts-renesas-gose-Remove-superfluous-port-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
