wifi: ath11k: restore register window after global reset (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12627,6 +12627,7 @@
 	patches.kernel.org/6.12.63-025-wifi-ath10k-Avoid-vdev-delete-timeout-when-fi.patch
 	patches.kernel.org/6.12.63-026-wifi-ath10k-Add-missing-include-of-export.h.patch
 	patches.kernel.org/6.12.63-027-wifi-ath10k-move-recovery-check-logic-into-a-.patch
+	patches.kernel.org/6.12.63-028-wifi-ath11k-restore-register-window-after-glo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
