--- a/series.conf
+++ b/series.conf
@@ -12681,6 +12681,7 @@
 	patches.kernel.org/6.12.63-079-RDMA-rxe-Fix-null-deref-on-srq-rq.queue-after.patch
 	patches.kernel.org/6.12.63-080-ARM-dts-renesas-gose-Remove-superfluous-port-.patch
 	patches.kernel.org/6.12.63-081-ARM-dts-renesas-r9a06g032-rzn1d400-db-Drop-in.patch
+	patches.kernel.org/6.12.63-082-Revert-mtd-rawnand-marvell-fix-layouts.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
