clk: keystone: fix compile testing (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12875,6 +12875,7 @@
 	patches.kernel.org/6.12.63-273-mtd-lpddr_cmds-fix-signed-shifts-in-lpddr_cmd.patch
 	patches.kernel.org/6.12.63-274-remoteproc-qcom_q6v5_wcss-fix-parsing-of-qcom.patch
 	patches.kernel.org/6.12.63-275-md-raid5-fix-IO-hang-when-array-is-broken-wit.patch
+	patches.kernel.org/6.12.63-276-clk-keystone-fix-compile-testing.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
