--- a/series.conf
+++ b/series.conf
@@ -12661,6 +12661,7 @@
 	patches.kernel.org/6.12.63-059-clk-qcom-camcc-sm6350-Specify-Titan-GDSC-powe.patch
 	patches.kernel.org/6.12.63-060-clk-qcom-camcc-sm6350-Fix-PLL-config-of-PLL2.patch
 	patches.kernel.org/6.12.63-061-clk-qcom-camcc-sm7150-Fix-PLL-config-of-PLL2.patch
+	patches.kernel.org/6.12.63-062-soc-Switch-back-to-struct-platform_driver-rem.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
