--- a/series.conf
+++ b/series.conf
@@ -11389,6 +11389,7 @@
 	patches.suse/net-mana-Add-speed-support-in-mana_get_link_ksetting.patch
 	patches.suse/net-mana-Handle-unsupported-HWC-commands.patch
 	patches.suse/selftests-net-use-slowwait-to-stabilize-vrf_route_leaking-.patch
+	patches.suse/selftests-net-use-slowwait-to-make-sure-IPv6-setup-finishe.patch
 	patches.suse/net-mana-Set-tx_packets-to-post-gso-processing-packe.patch
 	patches.suse/wifi-iwlegacy-Check-rate_idx-range-after-addition.patch
 	patches.suse/wifi-mac80211-update-radar_required-in-channel-conte.patch
