netfilter: nf_conncount: fix leaked ct in error paths (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12954,6 +12954,7 @@
 	patches.kernel.org/6.12.63-352-ALSA-wavefront-Fix-integer-overflow-in-sample.patch
 	patches.kernel.org/6.12.63-353-ASoC-codecs-nau8325-Silence-uninitialized-var.patch
 	patches.kernel.org/6.12.63-354-Linux-6.12.63.patch
+	patches.kernel.org/netfilter-nf_conncount-fix-leaked-ct-in-error-paths.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
