netfilter: nf_conncount: fix leaked ct in error paths (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -697,6 +697,7 @@
 	# sorted patches
 	########################################################
 	patches.suse/drm-i915-xe-fbdev-add-intel_fbdev_fb_pitch_align.patch
+	patches.suse/netfilter-nf_conncount-fix-leaked-ct-in-error-paths.patch
 	########################################################
 	# end of sorted patches
 	########################################################
