--- a/series.conf
+++ b/series.conf
@@ -56039,6 +56039,7 @@
 	patches.suse/x86-bugs-Report-correct-retbleed-mitigation-status.patch
 	patches.suse/x86-resctrl-Refactor-resctrl_arch_rmid_read.patch
 	patches.suse/bpf-selftests-Fix-test_tcpnotify_user.patch
+	patches.suse/bpf-Do-not-limit-bpf_cgroup_from_id-to-current-s-namespace.patch
 	patches.suse/bpf-Explicitly-check-accesses-to-bpf_sock_addr.patch
 	patches.suse/driver-core-PM-Set-power.no_callbacks-along-with-pow.patch
 	patches.suse/hwmon-k10temp-Add-thermal-support-for-AMD-Family-1Ah.patch
