bpf: Do not limit bpf_cgroup_from_id to current's namespace (bsc#1255433).

--- a/series.conf
+++ b/series.conf
@@ -12564,6 +12564,7 @@
 	patches.suse/x86-bugs-Report-correct-retbleed-mitigation-status.patch
 	patches.suse/x86-resctrl-Refactor-resctrl_arch_rmid_read.patch
 	patches.suse/bpf-selftests-Fix-test_tcpnotify_user.patch
+	patches.suse/bpf-Do-not-limit-bpf_cgroup_from_id-to-current-s-namespace.patch
 	patches.suse/bpf-Explicitly-check-accesses-to-bpf_sock_addr.patch
 	patches.suse/bpf-arm64-Call-bpf_jit_binary_pack_finalize-in-bpf_jit_fre.patch
 	patches.suse/selftests-bpf-Fix-flaky-bpf_cookie-selftest.patch
