--- a/series.conf
+++ b/series.conf
@@ -57112,6 +57112,7 @@
 	patches.suse/drm-tilcdc-Fix-removal-actions-in-case-of-failed-pro.patch
 	patches.suse/drm-mgag200-Fix-big-endian-support.patch
 	patches.suse/irqchip-mchp-eic-Fix-error-code-in-mchp_eic_domain_a.patch
+	patches.suse/cgroup-rstat-use-LOCK-CMPXCHG-in-css_rstat_updated.patch
 
 	# out-of-tree patches
 	patches.suse/selftests-run_kselftest.sh-Add-skip-argument-option.patch
