--- a/series.conf
+++ b/series.conf
@@ -13972,6 +13972,7 @@
 	patches.suse/drm-mgag200-Fix-big-endian-support.patch
 	patches.suse/args-fix-documentation-to-reflect-the-correct-number.patch
 	patches.suse/irqchip-mchp-eic-Fix-error-code-in-mchp_eic_domain_a.patch
+	patches.suse/cgroup-rstat-use-LOCK-CMPXCHG-in-css_rstat_updated.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
