bpf: Reject bpf_timer for PREEMPT_RT (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34564,6 +34564,7 @@
 	patches.suse/compiler-clang.h-define-__SANITIZE_-__-macros-only-w.patch
 	patches.suse/proc-fix-type-confusion-in-pde_set_flags.patch
 	patches.suse/tcp_bpf-Call-sk_msg_free-when-tcp_bpf_send_verdict-f.patch
+	patches.suse/bpf-Reject-bpf_timer-for-PREEMPT_RT.patch
 	patches.suse/s390-pai-Deny-all-events-not-handled-by-this-PMU.patch
 	patches.suse/s390-cpum_cf-Deny-all-sampling-events-by-counter-PMU.patch
 	patches.suse/net-fec-Fix-possible-NPD-in-fec_enet_phy_reset_after.patch
